[gd_scene load_steps=5 format=3 uid="uid://cam2t0bj4ohvp"]

[ext_resource type="Script" path="res://game/ui/level_panel.gd" id="1_u1ci1"]
[ext_resource type="StyleBox" uid="uid://g02hbb2oqs87" path="res://game/ui/theme/brick_wall_style.tres" id="2_8v3h3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cdrb5"]
bg_color = Color(0, 0, 0, 0.470588)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1bmys"]
bg_color = Color(0.186777, 0.00205583, 0.302462, 1)

[node name="LevelPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -640.0
offset_bottom = -360.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_u1ci1")
metadata/_edit_use_anchors_ = true

[node name="LevelStatisticsContainer" type="PanelContainer" parent="."]
layout_mode = 2
anchor_left = 1.0
anchor_right = 1.0
offset_left = 128.0
offset_right = 224.0
offset_bottom = 95.0
grow_horizontal = 0
theme_override_styles/panel = ExtResource("2_8v3h3")

[node name="MarginContainer" type="MarginContainer" parent="LevelStatisticsContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="LevelStatisticsContainer/MarginContainer"]
layout_mode = 2

[node name="LevelTitleLabel" type="Label" parent="LevelStatisticsContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"GroupHeaderLabel"
text = "Level"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CurrentLevelLabel" type="Label" parent="LevelStatisticsContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"LargeValueLabel"
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LinesStatisticsContainer" type="PanelContainer" parent="."]
layout_mode = 2
anchor_left = 1.0
anchor_right = 1.0
offset_right = 128.0
offset_bottom = 95.0
grow_horizontal = 0
theme_override_styles/panel = ExtResource("2_8v3h3")

[node name="MarginContainer" type="MarginContainer" parent="LinesStatisticsContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="LinesStatisticsContainer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="LinesStatisticsContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="LinesTitleLabel" type="Label" parent="LinesStatisticsContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"GroupHeaderLabel"
text = "Lines"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LinesSubTitleLabel" type="Label" parent="LinesStatisticsContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"GroupSubHeaderLabel"
text = "until next level"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="LinesStatisticsContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="LinesProgressBar" type="ProgressBar" parent="LinesStatisticsContainer/MarginContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/background = SubResource("StyleBoxFlat_cdrb5")
theme_override_styles/fill = SubResource("StyleBoxFlat_1bmys")
max_value = 10.0
rounded = true
show_percentage = false

[node name="LinesProgressLabel" type="Label" parent="LinesStatisticsContainer/MarginContainer/VBoxContainer/MarginContainer/LinesProgressBar"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"ValueLabel"
text = "10"
horizontal_alignment = 1
vertical_alignment = 1
